frontend/deployment.yml
apiVersion: app/v1
kind: Deployment
metadata: 
  name: frontend-deployment
spec: 
  selector: 
    matchLabels: 
      app: frontend
  replicas: 1
  template: 
    metadata: 
      labels:
        app: frontend
    spec: 
      containers: 
        - name: frontend
          image: 124355654427.dkr.ecr.ap-south-1.amazonaws.com/frontend/service:20250415144539
          ports:
            - containerPort: 80
