frontend/service.yml
apiVersion: v1
kind: Service
metadata: 
  name: frontend-service
spec: 
  type: NodePort
  selector: 
    app: frontend
  ports: 
      - port: 90
        targetPort: 80
        nodePort: 30000
